fix: reduced margin of swiper side images on mobile

--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -26,6 +26,6 @@
     padding: 5px;
   }
   .swiper-slide img {
-    margin-bottom: 30px;
+    margin-bottom: 24px;
   }
 }
